--- a/build.gradle
+++ b/build.gradle
@@ -38,8 +38,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
 
     // Swagger
-    implementation "io.springfox:springfox-boot-starter:3.0.0"
-    implementation "io.springfox:springfox-swagger-ui:3.0.0"
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 }
 
 tasks.named('test') {
