--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,12 +14,18 @@ spring:
       hibernate:
         format_sql: false
         use_sql_comments: true
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
+
+
 jwt:
   secret: ${JWT_SECRET}
   access-token-validity-in-milliseconds: ${JWT_ACCESS_TOKEN_VALIDITY_IN_MILLISECONDS}
-client:
-  id: ${GOOGLE_CLIENT_ID}
-  secret: ${GOOGLE_CLIENT_SECRET}
 mvc:
   pathmatch:
     matching-strategy: ant_path_matcher
