--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,8 +19,10 @@ spring:
       client:
         registration:
           google:
+            redirect-uri: ${GOOGLE_REDIRECT_URI}
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
+            scope: ${GOOGLE_SCOPE}
 
 
 jwt:
